name:                memegen
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
-- license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable memegen
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       attoparsec
                     , base
                     , base-prelude
                     , cairo
                     , configurator
                     , containers
                     , directory
                     , filepath
                     , lens
                     , lens-aeson
                     , linklater
                     , mtl
                     , pango
                     , random
                     , text
                     , uuid
                     , warp
                     , wreq
  -- hs-source-dirs:
  default-language:    Haskell2010
